--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
     border-right: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
     font-weight: bold;
-    width: 40%;
+    width: 30%;
 }
 
 .p-galleria-thumbnail-item {
@@ -40,8 +40,10 @@ a:hover, a:focus, a:active,
     background: #FEF4D7;
 }
 .p-inputtext:enabled,
-.p-treeselect:not(.p-disabled) {
+.p-treeselect {
     border-color: #acadd3 !important;
+
+    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
 }
 .p-inputtext:enabled:hover,
 .p-treeselect:not(.p-disabled):hover {
@@ -58,4 +60,14 @@ a:hover, a:focus, a:active,
 
 .p-tree .p-tree-container .p-treenode .p-treenode-content.p-highlight {
     color: #2d2f82 !important;
+}
+
+.p-card .p-card-body {
+    padding: 1rem;
+}
+
+.p-galleria {
+    border-radius: 6px;
+    overflow: hidden;
+    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
 }
