--- a/src/index.css
+++ b/src/index.css
@@ -68,8 +68,8 @@ button:focus-visible {
 }
 
 .p-menubar {
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px, rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
-position: sticky;
+  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+  position: sticky;
 background: #eff4f4;
 }
 
