--- a/src/App.css
+++ b/src/App.css
@@ -1,102 +1,129 @@
 #root {
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    text-align: center;
-    font-family: Inclusive Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  text-align: center;
+  font-family:
+    Inclusive Sans,
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    Fira Sans,
+    Droid Sans,
+    Helvetica Neue,
+    sans-serif !important;
 }
 
 .info-table thead {
-    display: none;
+  display: none;
 }
 .info-table tr td:first-child {
-    background: #eff4f4;
-    padding-right: 12px;
-    border-right: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-    font-weight: bold;
-    width: 30%;
+  background: #eff4f4;
+  padding-right: 12px;
+  border-right: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  font-weight: bold;
+  width: 30%;
 }
 
 .p-galleria-thumbnail-item {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 a,
 .p-button.p-button-link:not(:disabled) {
-    color: #1982C4 !important;
-    text-decoration: none;
+  color: #1982c4 !important;
+  text-decoration: none;
 }
 
-a:hover, a:focus, a:active,
+a:hover,
+a:focus,
+a:active,
 .p-button.p-button-link:active,
 .p-button.p-button-link:focus,
 .p-button.p-button-link:hover {
-    color: rgb(62, 167, 231) !important;
+  color: rgb(62, 167, 231) !important;
+}
+.p-button-info {
+  color: #fff !important;
+  background: #1982c4;
+  border: 1px solid #1982c4;
 }
 
 .p-tree .p-tree-container .p-treenode .p-treenode-content.p-highlight {
-    background: #FEF4D7;
+  background: #fef4d7;
 }
 .p-inputtext:enabled,
 .p-treeselect {
-    border-color: #acadd3 !important;
-
-    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+  border-color: #acadd3 !important;
+  box-shadow:
+    0 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0 1px 1px 0 rgba(0, 0, 0, 0.14),
+    0 1px 3px 0 rgba(0, 0, 0, 0.12);
 }
 .p-inputtext:enabled:hover,
 .p-treeselect:not(.p-disabled):hover {
-    border-color: #2d2f82 !important;
+  border-color: #2d2f82 !important;
 }
 .p-checkbox.p-highlight .p-checkbox-box {
-    border-color: #646d70 !important;
-    background: #646d70 !important;
-    color: #ffffff;
+  border-color: #646d70 !important;
+  background: #646d70 !important;
+  color: #ffffff;
 }
 .p-checkbox.p-highlight .p-checkbox-box svg {
-    color: white;
+  color: white;
 }
 .p-treenode-content {
-    padding: 6px;
+  padding: 6px;
 }
 
 .p-tree .p-tree-container .p-treenode .p-treenode-content.p-highlight {
-    color: #2d2f82 !important;
+  color: #2d2f82 !important;
 }
 
 .p-card {
-    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12) !important;
+  box-shadow:
+    0 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0 1px 1px 0 rgba(0, 0, 0, 0.14),
+    0 1px 3px 0 rgba(0, 0, 0, 0.12) !important;
 }
 .p-card .p-card-body {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .p-galleria {
-    border-radius: 6px;
-    overflow: hidden;
-    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 6px;
+  overflow: hidden;
+  box-shadow:
+    0 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0 1px 1px 0 rgba(0, 0, 0, 0.14),
+    0 1px 3px 0 rgba(0, 0, 0, 0.12);
 }
 
 .img-container {
-    background-color: transparent !important;
-    background-position: center center !important;
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-    width: 100% !important;
-    display: flex !important;
-    position: relative !important;
-    overflow: hidden;
-    border: none !important;
-    justify-content: flex-end;
-    align-items: flex-start !important;
+  background-color: transparent !important;
+  background-position: center center !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  width: 100% !important;
+  display: flex !important;
+  position: relative !important;
+  overflow: hidden;
+  border: none !important;
+  justify-content: flex-end;
+  align-items: flex-start !important;
 }
 .img-container:hover {
-    cursor: zoom-in;
+  cursor: zoom-in;
 }
 .img-count {
   float: right !important;
   background: rgba(255, 255, 255, 0.8) !important;
-  user-select: none  !important;
+  user-select: none !important;
   margin-top: 16px !important;
   margin-right: 16px !important;
   font-size: 1.2em !important;
@@ -106,7 +133,7 @@ a:hover, a:focus, a:active,
   color: #333 !important;
   display: flex !important;
   height: auto !important;
-  border-radius: 100px  !important;
+  border-radius: 100px !important;
   font-weight: bold !important;
   justify-content: flex-end !important;
   align-items: flex-start !important;
@@ -123,7 +150,7 @@ a:hover, a:focus, a:active,
   padding: 10px !important;
   color: #222 !important;
   transition: all 0.4s ease-in-out !important;
-  font-size: 1.25em  !important;
+  font-size: 1.25em !important;
 }
 .img-button:hover .p-button-icon,
 .img-button:active .p-button-icon,
@@ -133,110 +160,119 @@ a:hover, a:focus, a:active,
 }
 
 .p-selectbutton .p-button.p-highlight {
-    background: #2f3186;
-    border-color: #2f3186;
-    color: #ffffff;
+  background: #2f3186;
+  border-color: #2f3186;
+  color: #ffffff;
 }
 
-.p-selectbutton .p-button{
-    border-radius: 16px;
-    padding: 6px 24px;
-    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+.p-selectbutton .p-button {
+  border-radius: 16px;
+  padding: 6px 24px;
+  box-shadow:
+    0 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0 1px 1px 0 rgba(0, 0, 0, 0.14),
+    0 1px 3px 0 rgba(0, 0, 0, 0.12);
 }
 .p-selectbutton .p-button:first-of-type {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
 .p-selectbutton .p-button:last-of-type {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 .map-container {
-    height: calc(100vh - 60px);
-    overflow: hidden;
+  height: calc(100vh - 60px);
+  overflow: hidden;
+  display: flex;
+  width: 100%;
+  position: relative;
+  padding: 0;
 }
 .map-button-container {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 .tag-container {
-    margin-top: -10px;
-    margin-bottom: 12px;
+  margin-top: -10px;
+  margin-bottom: 12px;
 }
 .recenter-button {
-    margin-right: 12px;
-    padding: 2px 16px;
+  margin-right: 12px;
+  padding: 2px 16px;
 }
 .info-container {
-    height: calc(100vh - 60px);
-    overflow: hidden;
-    z-index: 9;
+  height: calc(100vh - 60px);
+  overflow: hidden;
+  z-index: 9;
 }
 h2 {
-    margin: 0;
+  margin: 0;
 }
 .listview {
-    padding-left: 0;
-    margin-top: 16px;
+  padding-left: 0;
+  margin-top: 16px;
 }
 .listview li {
-    list-style: none;
+  list-style: none;
 }
 .listview li:not(:first-child) {
-    border-top: 1px solid #ccc;
+  border-top: 1px solid #ccc;
 }
 .p-button.p-button-icon-only {
-    width: auto;
+  width: auto;
 }
 
 .park-header,
 .park-tab-button,
-.park-link.p-button.p-button-text ,
+.park-link.p-button.p-button-text,
 .center-link.p-button.p-button-text {
-    color: #73b707;
+  color: #73b707;
 }
 .park-tab-button {
-    border-color: #73b707;
+  border-color: #73b707;
 }
 .park-tab-button.selected {
-    background: #73b707;
-    color: white;
+  background: #73b707;
+  color: white;
 }
 .park-header-container {
-    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
-    padding-top: 4px;
-    margin-bottom: 4px;
+  box-shadow:
+    0 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0 1px 1px 0 rgba(0, 0, 0, 0.14),
+    0 1px 3px 0 rgba(0, 0, 0, 0.12);
+  padding-top: 4px;
+  margin-bottom: 4px;
 }
 .park-header {
-    padding: 4px;
-    font-weight: bold;
+  padding: 4px;
+  font-weight: bold;
 }
 .sport-header,
 .sport-tab-button,
 .sport-link.p-button.p-button-text {
-    color: #1982c4;
+  color: #1982c4;
 }
 .sport-tab-button {
-    border-color: #1982c4;
+  border-color: #1982c4;
 }
 .sport-tab-button.selected {
-    background: #1982c4;
-    color: white;
+  background: #1982c4;
+  color: white;
 }
 .art-header,
 .art-tab-button,
 .art-link.p-button.p-button-text {
-    color: #FF595E;
+  color: #ff595e;
 }
 .art-tab-button {
-    border-color: #FF595E;
+  border-color: #ff595e;
 }
 .art-tab-button.selected {
-    background: #FF595E;
-    color: white;
+  background: #ff595e;
+  color: white;
 }
-
 
 .park-tab-button:not(.selected):hover,
 .park-tab-button:not(.selected):focus,
@@ -247,7 +283,7 @@ h2 {
 .center-link.p-button.p-button-text:hover,
 .center-link.p-button.p-button-text:focus,
 .center-link.p-button.p-button-text:active {
-    background: #eef7de;
+  background: #eef7de;
 }
 .sport-tab-button:not(.selected):hover,
 .sport-tab-button:not(.selected):focus,
@@ -255,7 +291,7 @@ h2 {
 .sport-link.p-button.p-button-text:hover,
 .sport-link.p-button.p-button-text:focus,
 .sport-link.p-button.p-button-text:active {
-    background: #eaf7ff;
+  background: #eaf7ff;
 }
 .art-tab-button:not(.selected):hover,
 .art-tab-button:not(.selected):focus,
@@ -263,155 +299,307 @@ h2 {
 .art-link.p-button.p-button-text:hover,
 .art-link.p-button.p-button-text:focus,
 .art-link.p-button.p-button-text:active {
-    background: #fff2f2;
+  background: #fff2f2;
 }
 
 .listview {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .p-card-body {
-    padding: 8px !important;
+  padding: 8px !important;
 }
 .listview-container {
-    text-align: left;
-    padding: 0;
-    height: calc(100vh - 285px);
-    overflow-y: auto;
+  text-align: left;
+  padding: 0;
+  height: calc(100vh - 285px);
+  overflow-y: auto;
 }
 .listview-button {
-    min-width: 31%;
-    border-bottom: none;
-    border-top-left-radius: 16px;
-    border-top-right-radius: 16px;
-    border-bottom-right-radius: 0;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-    box-shadow: #CCC 0 0 .25em;
-    height: 48px;
+  min-width: 31%;
+  border-bottom: none;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  border-bottom-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  box-shadow: #ccc 0 0 0.25em;
+  height: 48px;
 }
 
 .sidebar {
-    height: calc(100vh - 230px);
-    overflow-y: auto;
+  height: calc(100vh - 230px);
+  overflow-y: auto;
+}
+.clear-btn-container {
+  position: relative;
+}
+.clear-interests-button {
+  float: right;
+  color: #2f3186;
+  padding: 0 12px;
 }
 .clear-button {
-    color: #2f3186;
-    padding: 0 16px;
-    margin-top: -6px;
+  color: #2f3186;
+  position: fixed;
+  float: none;
+  padding: 12px;
+  height: 42px;
+  margin-left: -40px;
+  z-index: 1000;
+  box-shadow:
+    0 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0 1px 1px 0 rgba(0, 0, 0, 0.14),
+    0 1px 3px 0 rgba(0, 0, 0, 0.12);
 }
 .clear-button:hover,
 .clear-button:focus,
 .clear-button:active {
-    background: #f5f5f5;
+  background: #57a8d9;
+  border-color: #57a8d9;
 }
 .p-button,
 .p-card-content label {
-    font-family: Inclusive Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
+  font-family:
+    Inclusive Sans,
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    Fira Sans,
+    Droid Sans,
+    Helvetica Neue,
+    sans-serif !important;
+}
+.interests-card {
+  padding: 0;
+  text-align: left;
+  background: #feefc3;
+  margin-bottom: 16px;
+  box-shadow:
+    0 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0 1px 1px 0 rgba(0, 0, 0, 0.14),
+    0 1px 3px 0 rgba(0, 0, 0, 0.12);
 }
 .filter-text {
-    box-shadow: none !important;
-    border: 1px solid #a1c30d !important;
-    border-right: none !important;
+  box-shadow: none !important;
+  border: 1px solid #a1c30d !important;
+  border-right: none !important;
 }
 
 .mobile-footer {
-    display: none;
+  display: none;
 }
 .non-mobile-footer {
-    display: block;
+  display: block;
 }
 .listview-button,
 .p-inputgroup {
-    height: 48px !important;
+  height: 48px !important;
 }
 .filter-container {
-    padding: 0 !important;
-    padding-left: 8px !important;
-    padding-top: 8px !important;
+  padding: 0 !important;
+  padding-left: 8px !important;
+  padding-top: 8px !important;
+}
+.menu-title {
+  font-size: 1.1em;
+  padding-left: 4px;
+  padding-top: 2px;
+  white-space: keep-all;
+}
+.park-tag {
+  margin-left: 6px;
+  border-radius: 16px;
+  padding: 4px 10px;
+}
+.img-container .img-left {
+  width: 45px;
+  height: 100%;
+  position: absolute;
+  left: 6px;
+  z-index: 999;
+}
+.img-container .img-right {
+  width: 45px;
+  height: 100%;
+  position: absolute;
+  right: 14px;
+  z-index: 999;
+}
+.link {
+  width: 100%;
+  text-align: left;
+  padding-left: 10%;
+  font-size: 1em;
+}
+.sub-link {
+  width: 100%;
+  text-align: left;
+  padding-left: 10% !important;
+  font-size: 1em;
+}
+.table-link {
+  width: 100%;
+  text-align: left;
+  font-size: 1.2em;
+}
+.tab-container {
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 0;
+  margin: 0;
+  margin-bottom: -16px;
+}
 
+.address-card {
+  background: #eff4f4;
+  margin-bottom: 16px;
+  text-align: right;
+}
+.address-container {
+  padding: 8px;
+  padding-left: 16px;
+  padding-bottom: 0;
+  opacity: 0.8;
+  text-align: left;
+}
+.address-header {
+  padding: 8px;
+  padding-left: 16px;
+  padding-bottom: 0;
+  opacity: 0.8;
+  text-align: left;
+}
+.address-link {
+  font-size: 1.1em;
+  display: block;
+  white-space: keep-all;
+}
+.icon-img {
+  width: 20px;
+  padding-right: 6px;
+}
+.map-div {
+  display: flex;
+  overflow: hidden;
+  background: #dfe5e7;
+  margin-top: 2px;
+  width: 100%;
 }
 
 @media only screen and (max-width: 1200px) {
-    .listview-button,
-    .p-inputgroup {
-        height: 40px !important;
-    }
-    .p-treeselect-label,
-    .p-inputtext {
-        padding: 3px !important;
-        padding-left: 8px !important;
-    }
-    .p-treeselect-token {
-        padding: 3px 8px !important;
-    }
-    .filter-container {
-        padding: 0 !important;
-        padding-top: 4px !important;
-        padding-bottom: 12px !important;
-
-    }
+  .listview-button,
+  .p-inputgroup {
+    height: 40px !important;
+  }
+  .p-treeselect-label,
+  .p-inputtext {
+    padding: 3px !important;
+    padding-left: 8px !important;
+  }
+  .p-treeselect-token {
+    padding: 3px 8px !important;
+  }
+  .filter-container {
+    padding: 0 !important;
+    padding-top: 4px !important;
+  }
 }
 
 @media only screen and (max-width: 767px) {
-    .map-container {
-        height: calc(40vh - 60px);
-    }
-    .p-treeselect-label {
-        padding: 4px;
-    }
-    .p-treenode-content {
-        padding: 4px;
-    }
-    .p-treeselect-token {
-        font-size: 0.8em;
-        padding: 2px 12px;
-    }
-    .p-button {
-        padding: 4px;
-    }
-    #root {
-        overflow-y: auto;
-    }
-    .p-selectbutton .p-button {
-        padding: 4px 12px !important;
-    }
-    .tag-container {
-        margin-top: 6px;
-    }
-    .recenter-button {
-        position: absolute;
-        z-index: 999;
-        top: 16px;
-        left: 16px;
-        background: white;
-        color: #797979;
-        border-color: #c5c5c5;
-        font-size: 1.2em;
-        box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
-        user-select: none;
-    }
-    h2 {
-        margin-bottom: 0;
-        font-size: 1.2em;
-    }
-    .p-card-body {
-        padding: 0.5rem !important;
-    }
-    .listview-container {
-        padding: 0;
-    }
-    .sidebar,
-    .info-container {
-        border-radius: 16px;
-        height: calc(60vh - 40px);
-        box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
-    }
-    .mobile-footer {
-        display: block;
-    }
-    .non-mobile-footer {
-        display: none;
-    }
+  .map-container {
+    height: calc(40vh - 60px);
+  }
+  .p-treeselect-label {
+    padding: 4px;
+  }
+  .p-treenode-content {
+    padding: 4px;
+  }
+  .p-treeselect-token {
+    font-size: 0.8em;
+    padding: 2px 12px;
+  }
+  .p-button {
+    padding: 4px;
+    font-size: 0.9em;
+  }
+  #root {
+    overflow-y: auto;
+  }
+  .p-selectbutton .p-button {
+    padding: 4px 12px !important;
+  }
+  .tag-container {
+    margin-top: 6px;
+  }
+  .recenter-button {
+    background: white;
+    border-color: #c5c5c5;
+    box-shadow:
+      0 2px 1px -1px rgba(0, 0, 0, 0.2),
+      0 1px 1px 0 rgba(0, 0, 0, 0.14),
+      0 1px 3px 0 rgba(0, 0, 0, 0.12);
+    color: #797979;
+    font-size: 1.2em;
+    left: 16px;
+    position: absolute;
+    top: 16px;
+    user-select: none;
+    z-index: 999;
+  }
+  h2 {
+    margin-bottom: 0;
+    font-size: 1.2em;
+  }
+  .p-card-body {
+    padding: 0.5rem !important;
+  }
+  .listview-container {
+    padding: 0;
+  }
+  .sidebar,
+  .info-container {
+    border-radius: 16px;
+    box-shadow:
+      0 2px 1px -1px rgba(0, 0, 0, 0.2),
+      0 1px 1px 0 rgba(0, 0, 0, 0.14),
+      0 1px 3px 0 rgba(0, 0, 0, 0.12);
+    height: calc(60vh - 40px);
+  }
+  .mobile-footer {
+    display: block;
+  }
+  .non-mobile-footer {
+    display: none;
+  }
+  .clear-button {
+    height: 32px;
+  }
+  .park-tag {
+    margin-left: 4px;
+    padding: 2px 8px;
+    border-radius: 12px;
+  }
+  .clear-button {
+    padding: 14px;
+    height: 44px;
+    margin-left: -40px;
+    margin-top: -10px;
+  }
+  .link,
+  .sub-link {
+    font-size: 0.9em !important;
+  }
+  .info-table {
+    padding-bottom: 33%;
+  }
+  .p-datatable-wrapper {
+    overflow-x: hidden !important;
+  }
 }
